feat: core/login page skin

--- a/app/index.html
+++ b/app/index.html
@@ -78,11 +78,8 @@
     <script src="routes.js"></script>
     <script src="main.js"></script>
 
+    <script src="js/controllers/login.js"></script>
     <script src="js/controllers/dashboard.js"></script>
-    <script src="js/controllers/data-view.js"></script>
-    <script src="js/controllers/metrics.js"></script>
-
-    <script src="js/services/issues.js"></script>
 
     <script src="js/directives/pg-sidebar.js"></script>
     <script src="js/directives/cs-select.js"></script>
