--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,6 @@
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css"/>
 
-    <link rel=" stylesheet" href="bower_components/nvd3/build/nv.d3.css"/>
-    <link rel="stylesheet" href="js/lib/mapplic/css/mapplic.css"/>
-
     <link rel="stylesheet" href="styles/pages-icons.css"/>
     <link rel="stylesheet" href="styles/pages.css"/>
     <link rel="stylesheet" href="styles/styles.css"/>
@@ -41,7 +38,8 @@
 
     <div class="full-height" ui-view></div>
 
-    <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.5.3/firebase.js"></script>
+
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/angular/angular.js"></script>
@@ -54,10 +52,6 @@
     <script src="js/lib/jquery.unveil.min.js"></script>
     <script src="js/lib/modernizr.custom.js"></script>
     <script src="js/lib/pages.js"></script>
-    <script src="js/lib/mapplic/js/hammer.js"></script>
-    <script src="js/lib/mapplic/js/jquery.mousewheel.js"></script>
-    <script src="js/lib/mapplic/js/mapplic.js"></script>
-
 
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-aria/angular-aria.min.js"></script>
@@ -67,12 +61,6 @@
     <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
 
-    <script src="bower_components/d3/d3.js"></script>
-    <script src="bower_components/nvd3/build/nv.d3.js"></script>
-
-    <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
-
-
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="routes.js"></script>
@@ -80,6 +68,8 @@
 
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/dashboard.js"></script>
+
+    <script src="js/services/user.js"></script>
 
     <script src="js/directives/pg-sidebar.js"></script>
     <script src="js/directives/cs-select.js"></script>
