feat: listing pages for contents, fix: modal, accessibility

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
     <script src="node_modules/jquery.scrollbar/jquery.scrollbar.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="js/lib/ui.utils.min.js"></script>
     <script src="js/lib/jquery.ioslist.min.js"></script>
@@ -69,9 +70,13 @@
 
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/dashboard.js"></script>
+    <script src="js/controllers/hack.js"></script>
+    <script src="js/controllers/widget.js"></script>
 
     <script src="js/services/user.js"></script>
     <script src="js/services/facebook.js"></script>
+    <script src="js/services/notification.js"></script>
+    <script src="js/services/pool.js"></script>
 
     <script src="js/directives/pg-sidebar.js"></script>
     <script src="js/directives/cs-select.js"></script>
