fix: details on hack and dashboard pages

--- a/app/index.html
+++ b/app/index.html
@@ -59,8 +59,6 @@
     <script src="bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="bower_components/angular-material/angular-material.min.js"></script>
     <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
-    <script src="bower_components/chart.js/dist/Chart.min.js"></script>
-    <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
 
     <script src="app.js"></script>
@@ -72,11 +70,13 @@
     <script src="js/controllers/dashboard.js"></script>
     <script src="js/controllers/hack.js"></script>
     <script src="js/controllers/widget.js"></script>
+    <script src="js/controllers/content.js"></script>
 
     <script src="js/services/user.js"></script>
     <script src="js/services/facebook.js"></script>
     <script src="js/services/notification.js"></script>
     <script src="js/services/pool.js"></script>
+    <script src="js/services/configuration.js"></script>
 
     <script src="js/directives/pg-sidebar.js"></script>
     <script src="js/directives/cs-select.js"></script>
