--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,8 @@
     <link rel="icon" type="image/ico" href="facehack.ico"/>
 
     <!--build:css(.) css/vendor.min.css -->
-    <!-- <link rel="stylesheet" href="node_modules/pace-progress/themes/red/pace-theme-flash.css"/> -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="node_modules/jquery.scrollbar/jquery.scrollbar.css"/>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/> <!-- aqui -->
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/> <!-- aqui -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css"/>
     <!-- endbuild -->
@@ -32,13 +30,12 @@
 
     <!-- build:js(.) js/bundle.min.js -->
     <script src="bower_components/firebase/firebase.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/angular/angular.js"></script>
-    <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
-    <script src="node_modules/jquery.scrollbar/jquery.scrollbar.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
+    <script src="bower_components/jquery.scrollbar/jquery.scrollbar.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="bower_components/angular-material/angular-material.min.js"></script>
