--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,13 @@
     <script src="js/directives/pg-horizontal-menu.js"></script>
     <script src="js/directives/pg-tab-dropdownfx.js"></script>
     <script src="js/directives/skycons.js"></script>
+
+    <script src="components/components.module.js"></script>
+    <script src="components/card/card.ctrl.js"></script>
+    <script src="components/profile/profile.ctrl.js"></script>
+    <script src="components/sidebar/sidebar.ctrl.js"></script>
+    <script src="components/pages-pool/pages-pool.ctrl.js"></script>
+    <script src="components/contents-pool/contents-pool.ctrl.js"></script>
     <!-- endbuild -->
   </body>
 </html>
