fix: accessibility, feat: database

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
     <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
     <script src="bower_components/lodash/dist/lodash.js"></script>
+    <script src="bower_components/angular-logger-max/logger.service.js"></script>
     <!-- endbuild -->
     <!-- build:js js/script.min.js -->
     <script src="js/lib/ui.utils.min.js"></script>
