--- a/app/index.html
+++ b/app/index.html
@@ -27,8 +27,15 @@
 </head>
 <body>
     <div class="full-height" ui-view></div>
-    <script src="https://connect.facebook.net/en_US/sdk.js"></script>
-
+    <script src="//connect.facebook.net/en_US/sdk.js"></script>
+    <script>
+      FB.init({
+        appId      : '1604104083228708',
+        status     : true,
+        xfbml      : true,
+        version    : 'v2.6'
+      });
+    </script>
     <!-- build:js(.) js/bundle.min.js -->
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
