fix: accessibility main screen

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css"/>
     <!-- endbuild -->
-    <!-- build:css css/main.min.css -->
+    <!-- build:css css/main-v2.min.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
