fix: put manifest into index

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <meta content="P5 Udacity" name="description"/>
     <meta content="Alan Mortoni" name="author"/>
 
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/ico" href="facehack.ico"/>
 
     <!--build:css(.) css/vendor.min.css -->
